--- a/txt_task.ipynb
+++ b/txt_task.ipynb
@@ -2,42 +2,266 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    address             agent     city days    neighborhood  \\\n",
-      "0  21807 Forest Glade Drive      Jodi Manfred   Humble   24  forest shadows   \n",
-      "1       4706 Broadmark Lane    Cellina Stokes   Humble   66  forest shadows   \n",
-      "2       4602 Fieldwick Lane  Michael Thiltgen   Humble   80  forest shadows   \n",
-      "3     21802 Pine Cone Drive    Katherine Ware   Humble   81  forest shadows   \n",
-      "4      4503 Clairfield Lane       Rick Raymor   Humble  122  forest shadows   \n",
-      "5                       NaN               NaN      NaN  NaN             NaN   \n",
-      "6     15202 Claypool Street     Rosa Gonzalez  Houston  111  aldine estates   \n",
-      "7                       NaN               NaN      NaN  NaN             NaN   \n",
+      "                         address                agent         city days  \\\n",
+      "0         10919 Sagecanyon Drive       Nusrat Ghafoor      Houston    3   \n",
+      "1            11010 Sagepark Lane     Amanda Escamilla      Houston    5   \n",
+      "2            11323 Sagevale Lane           Sonal Shah      Houston    9   \n",
+      "3          11026 Sagemeadow Lane        Robert Roland      Houston   10   \n",
+      "4           11118 Sagedowne Lane      Sebastian Ponce      Houston    5   \n",
+      "5    18922 Picnic Pavilion Court         Richard Hale      Cypress   18   \n",
+      "6           10339 Sagerock Drive        Rebecca Casey      Houston   18   \n",
+      "7            10818 Sageleaf Lane          Mark Benoit      Houston   19   \n",
+      "8           10402 Sagedowne Lane        Davian Walker      Houston    5   \n",
+      "9          10910 Sagetrail Drive       Yesenia Guerra      Houston   30   \n",
+      "10          11602 Sagedowne Lane      Yaneth Zaragosa      Houston   34   \n",
+      "11        10835 Sageburrow Drive  Jane NgaDung Nguyen      Houston   34   \n",
+      "12         6106 Great Oaks Drive         Marisa Lopez      Houston   15   \n",
+      "13      21807 Forest Glade Drive         Jodi Manfred       Humble   24   \n",
+      "14           4706 Broadmark Lane       Cellina Stokes       Humble   66   \n",
+      "15           4602 Fieldwick Lane     Michael Thiltgen       Humble   80   \n",
+      "16         21802 Pine Cone Drive       Katherine Ware       Humble   81   \n",
+      "17          4503 Clairfield Lane          Rick Raymor       Humble  122   \n",
+      "18         15202 Claypool Street        Rosa Gonzalez      Houston  111   \n",
+      "19             2418 Toyah Avenue          Paula Plata      Houston   15   \n",
+      "20          2517 Woodgate Street           Gina Lopez      Houston  109   \n",
+      "21           2802 Rosebury Drive    Esmeralda Herrera      Houston  131   \n",
+      "22         2615 Balmorhea Avenue      Mary Villarreal      Houston  169   \n",
+      "23              906 Lynwood Road        Rania Hanania       Spring   17   \n",
+      "24             1311 Lynwood Road       Gidget Sauceda       Spring    4   \n",
+      "25                14301 Lee Road        Maria Salazar      Houston  164   \n",
+      "26        13200 Huffmeister Road        Amjad Mushtaq      Cypress   20   \n",
+      "27                0 Maxwell Road        Kristi Grimes      Cypress   84   \n",
+      "28            13026 Maxwell Road         Ryan Jockers      Cypress  244   \n",
+      "29           16314 Waycreek Road       Arlene Simmons      Houston    3   \n",
+      "..                           ...                  ...          ...  ...   \n",
+      "115          13355 Joliet Street        Hernan Garcia      Houston   17   \n",
+      "116          13318 Peoria Street           Omar Scanu      Houston   62   \n",
+      "117              0 Mobile Street         Jeff Denning      Houston  184   \n",
+      "118        1050 Glenalbyn Street           Omar Scanu      Houston  248   \n",
+      "119          1126 Westmont Drive            Lou Rosas      Houston  367   \n",
+      "120             2507 15th Street           Erik Czirr  Galena Park    1   \n",
+      "121           1107 Clinton Drive           Ellen Holt  Galena Park   17   \n",
+      "122              2516 6th Street         Denes Jafari  Galena Park   17   \n",
+      "123              2503 9th Street      Emelita Rhoades  Galena Park   26   \n",
+      "124              2515 5th Street     Roosevelt Mucker  Galena Park   31   \n",
+      "125             2516 15th Street     Gloria Gutierrez  Galena Park   15   \n",
+      "126              1501 Bank Drive     Gloria Gutierrez  Galena Park   37   \n",
+      "127             1905 11th Street        Thelma Ibarra  Galena Park  110   \n",
+      "128             2513 11th Street         Ana Gonzalez  Galena Park   87   \n",
+      "129                    1712 10th       Belinda Malone  Galena Park  110   \n",
+      "130           1607 Clinton Drive           Jose Ramon  Galena Park  147   \n",
+      "131          8811 Imogene Street        Nguyen Wilson      Houston    5   \n",
+      "132           8711 Reamer Street          Wayne Comer      Houston   18   \n",
+      "133            8706 Jason Street        Nguyen Wilson      Houston  169   \n",
+      "134   LT 27 Highland Shores Road       Veronica Gamez    Highlands  112   \n",
+      "135           00 Shorewick Drive        Emiliano Nino    Highlands  272   \n",
+      "136            0 Shorewick Drive        Emiliano Nino    Highlands  272   \n",
+      "137         2425 Shorewick Drive        Emiliano Nino    Highlands  173   \n",
+      "138         17404 Moreland Drive      Dessiree Macias  Channelview   29   \n",
+      "139            5816 Melinda Lane         Renee Taylor     Pasadena    9   \n",
+      "140               5802 Lucy Lane          Lance Loken     Pasadena   21   \n",
+      "141          5816 S Meadow Drive        Ozzie Ramirez     Pasadena   46   \n",
+      "142              6419 Olson Lane          James Toler     Pasadena    3   \n",
+      "143     9414 Spencer Hwy Highway        Mary Carrizal     La Porte   96   \n",
+      "144     9406 Spencer Hwy Highway        Mary Carrizal     La Porte   96   \n",
       "\n",
-      "                                            office   price state    zip  \\\n",
-      "0                                       JLA Realty  171500    TX  77338   \n",
-      "1                                    Crowne Realty  189900    TX  77338   \n",
-      "2                   Greenbriar Real Estate Service  239900    TX  77338   \n",
-      "3                             Irie Properties, LLC  259500    TX  77338   \n",
-      "4                                 RE/MAX Universal     NaN    TX  77338   \n",
-      "5                                              NaN  199000   NaN    NaN   \n",
-      "6  REALM Real Estate Professionals - North Houston     NaN    TX  77032   \n",
-      "7                                              NaN  650000   NaN    NaN   \n",
+      "                  neighborhood  \\\n",
+      "0                     sagemont   \n",
+      "1                     sagemont   \n",
+      "2                     sagemont   \n",
+      "3                     sagemont   \n",
+      "4                     sagemont   \n",
+      "5                     sagemont   \n",
+      "6                     sagemont   \n",
+      "7                     sagemont   \n",
+      "8                     sagemont   \n",
+      "9                     sagemont   \n",
+      "10                    sagemont   \n",
+      "11                    sagemont   \n",
+      "12           riverwood estates   \n",
+      "13              forest shadows   \n",
+      "14              forest shadows   \n",
+      "15              forest shadows   \n",
+      "16              forest shadows   \n",
+      "17              forest shadows   \n",
+      "18              aldine estates   \n",
+      "19                  castlewood   \n",
+      "20                  castlewood   \n",
+      "21                  castlewood   \n",
+      "22                  castlewood   \n",
+      "23             lynwood estates   \n",
+      "24             lynwood estates   \n",
+      "25      parkwood estates 77032   \n",
+      "26    lake cypress estates u_r   \n",
+      "27    lake cypress estates u_r   \n",
+      "28    lake cypress estates u_r   \n",
+      "29               bammel forest   \n",
+      "..                         ...   \n",
+      "115         home owned estates   \n",
+      "116         home owned estates   \n",
+      "117         home owned estates   \n",
+      "118         home owned estates   \n",
+      "119         home owned estates   \n",
+      "120                 galenapark   \n",
+      "121                 galenapark   \n",
+      "122                 galenapark   \n",
+      "123                 galenapark   \n",
+      "124                 galenapark   \n",
+      "125                 galenapark   \n",
+      "126                 galenapark   \n",
+      "127                 galenapark   \n",
+      "128                 galenapark   \n",
+      "129                 galenapark   \n",
+      "130                 galenapark   \n",
+      "131              braeburn glen   \n",
+      "132              braeburn glen   \n",
+      "133              braeburn glen   \n",
+      "134            highland shores   \n",
+      "135            highland shores   \n",
+      "136            highland shores   \n",
+      "137            highland shores   \n",
+      "138  san jacinto river estates   \n",
+      "139              bliss meadows   \n",
+      "140              bliss meadows   \n",
+      "141              bliss meadows   \n",
+      "142        crest haven estates   \n",
+      "143             spenwick place   \n",
+      "144             spenwick place   \n",
       "\n",
-      "                    datetime  \n",
-      "0 2019-07-08 20:25:59.309478  \n",
-      "1 2019-07-08 20:25:59.309478  \n",
-      "2 2019-07-08 20:25:59.309478  \n",
-      "3 2019-07-08 20:25:59.309478  \n",
-      "4 2019-07-08 20:25:59.309478  \n",
-      "5 2019-07-08 20:25:59.309478  \n",
-      "6 2019-07-08 20:25:59.309478  \n",
-      "7 2019-07-08 20:25:59.309478  \n"
+      "                                                office   price state    zip  \\\n",
+      "0                                    Walzel Properties  224500    TX  77089   \n",
+      "1                                           JLA Realty  175000    TX  77089   \n",
+      "2         REALM Real Estate Professionals - Sugar Land  199990    TX  77089   \n",
+      "3                                    Realty Associates  220000    TX  77089   \n",
+      "4                           Ponce Realty & Investments  199900    TX  77089   \n",
+      "5                         Perry Development Management  424900    TX  77433   \n",
+      "6                                   Casey Castles, LLC  148900    TX  77089   \n",
+      "7                                    RE/MAX 1st Source  169900    TX  77089   \n",
+      "8                              Houston's Choice Realty  199000    TX  77089   \n",
+      "9                                  CJM Realty Advisors  204999    TX  77089   \n",
+      "10                                              Strada  195000    TX  77089   \n",
+      "11                                     Alpha, REALTORS  225990    TX  77089   \n",
+      "12                                Near Town Properties  144700    TX  77050   \n",
+      "13                                          JLA Realty  199000    TX  77338   \n",
+      "14                                       Crowne Realty  171500    TX  77338   \n",
+      "15                      Greenbriar Real Estate Service  189900    TX  77338   \n",
+      "16                                Irie Properties, LLC  239900    TX  77338   \n",
+      "17                                    RE/MAX Universal  259500    TX  77338   \n",
+      "18     REALM Real Estate Professionals - North Houston  650000    TX  77032   \n",
+      "19                            Keller Williams Memorial  175000    TX  77039   \n",
+      "20                                         Loft Realty  200000    TX  77039   \n",
+      "21                       Century 21 Hardee-Team Realty  159000    TX  77039   \n",
+      "22                                 Ability Real Estate  125000    TX  77039   \n",
+      "23                                          JLA Realty  255000    TX  77373   \n",
+      "24                                    RE/MAX Universal  189900    TX  77373   \n",
+      "25                           Nautilus Real Estate, Ltd  184900    TX  77032   \n",
+      "26                                          Fast Homes  199000    TX  77429   \n",
+      "27                                      eXp Realty LLC  100000    TX  77429   \n",
+      "28   Better Homes and Gardens Real Estate Gary Gree...  384990    TX  77429   \n",
+      "29                                    RE/MAX Integrity  219000    TX  77068   \n",
+      "..                                                 ...     ...   ...    ...   \n",
+      "115                                    Turn Key Realty  149900    TX  77015   \n",
+      "116                                  RE/MAX 1st Source   45500    TX  77015   \n",
+      "117                                  Turner Mangum,LLC  160000    TX  77015   \n",
+      "118                                  RE/MAX 1st Source   24500    TX  77015   \n",
+      "119                          RE/MAX Real Estate Assoc.  265000    TX  77015   \n",
+      "120                              NextHome First Source  144500    TX  77547   \n",
+      "121                        RE/MAX Associates Northeast  275000    TX  77547   \n",
+      "122  Better Homes and Gardens Real Estate Gary Gree...  145000    TX  77547   \n",
+      "123                           Realty World Elite Group  189999    TX  77547   \n",
+      "124                             Generation Realty, LLC   99500    TX  77547   \n",
+      "125                                   The Horizon Team  169999    TX  77547   \n",
+      "126                                   The Horizon Team  129999    TX  77547   \n",
+      "127                                     Houston Realty  120900    TX  77547   \n",
+      "128                              Circa Real Estate LLC  142500    TX  77547   \n",
+      "129                           Keller Williams Memorial  108000    TX  77547   \n",
+      "130                                       Can-2 Realty  379000    TX  77547   \n",
+      "131                       Wilson Realty & Inv Grp, LLC  135000    TX  77074   \n",
+      "132                            360 Realty & Management  215000    TX  77074   \n",
+      "133                       Wilson Realty & Inv Grp, LLC  219000    TX  77074   \n",
+      "134          Coldwell Banker United, REALTORS- Baytown   19900    TX  77562   \n",
+      "135                                     Mission Realty   75000    TX  77562   \n",
+      "136                                     Mission Realty   75000    TX  77562   \n",
+      "137                                     Mission Realty  250000    TX  77562   \n",
+      "138                Keller Williams Realty Metropolitan  250000    TX  77530   \n",
+      "139                             Prince Properties, LLC  199900    TX  77505   \n",
+      "140                           Keller Williams Platinum  150000    TX  77505   \n",
+      "141                             Keller Williams Realty  190000    TX  77505   \n",
+      "142                        Logos Investment Properties  155000    TX  77505   \n",
+      "143                                    Main Properties  199900    TX  77571   \n",
+      "144                                    Main Properties  796599    TX  77571   \n",
+      "\n",
+      "                      datetime  \n",
+      "0   2019-07-09 00:28:06.031865  \n",
+      "1   2019-07-09 00:28:06.031865  \n",
+      "2   2019-07-09 00:28:06.031865  \n",
+      "3   2019-07-09 00:28:06.031865  \n",
+      "4   2019-07-09 00:28:06.031865  \n",
+      "5   2019-07-09 00:28:06.031865  \n",
+      "6   2019-07-09 00:28:06.031865  \n",
+      "7   2019-07-09 00:28:06.031865  \n",
+      "8   2019-07-09 00:28:06.031865  \n",
+      "9   2019-07-09 00:28:06.031865  \n",
+      "10  2019-07-09 00:28:06.031865  \n",
+      "11  2019-07-09 00:28:06.031865  \n",
+      "12  2019-07-09 00:28:06.031865  \n",
+      "13  2019-07-09 00:28:06.031865  \n",
+      "14  2019-07-09 00:28:06.031865  \n",
+      "15  2019-07-09 00:28:06.031865  \n",
+      "16  2019-07-09 00:28:06.031865  \n",
+      "17  2019-07-09 00:28:06.031865  \n",
+      "18  2019-07-09 00:28:06.031865  \n",
+      "19  2019-07-09 00:28:06.031865  \n",
+      "20  2019-07-09 00:28:06.031865  \n",
+      "21  2019-07-09 00:28:06.031865  \n",
+      "22  2019-07-09 00:28:06.031865  \n",
+      "23  2019-07-09 00:28:06.031865  \n",
+      "24  2019-07-09 00:28:06.031865  \n",
+      "25  2019-07-09 00:28:06.031865  \n",
+      "26  2019-07-09 00:28:06.031865  \n",
+      "27  2019-07-09 00:28:06.031865  \n",
+      "28  2019-07-09 00:28:06.031865  \n",
+      "29  2019-07-09 00:28:06.031865  \n",
+      "..                         ...  \n",
+      "115 2019-07-09 00:28:06.031865  \n",
+      "116 2019-07-09 00:28:06.031865  \n",
+      "117 2019-07-09 00:28:06.031865  \n",
+      "118 2019-07-09 00:28:06.031865  \n",
+      "119 2019-07-09 00:28:06.031865  \n",
+      "120 2019-07-09 00:28:06.031865  \n",
+      "121 2019-07-09 00:28:06.031865  \n",
+      "122 2019-07-09 00:28:06.031865  \n",
+      "123 2019-07-09 00:28:06.031865  \n",
+      "124 2019-07-09 00:28:06.031865  \n",
+      "125 2019-07-09 00:28:06.031865  \n",
+      "126 2019-07-09 00:28:06.031865  \n",
+      "127 2019-07-09 00:28:06.031865  \n",
+      "128 2019-07-09 00:28:06.031865  \n",
+      "129 2019-07-09 00:28:06.031865  \n",
+      "130 2019-07-09 00:28:06.031865  \n",
+      "131 2019-07-09 00:28:06.031865  \n",
+      "132 2019-07-09 00:28:06.031865  \n",
+      "133 2019-07-09 00:28:06.031865  \n",
+      "134 2019-07-09 00:28:06.031865  \n",
+      "135 2019-07-09 00:28:06.031865  \n",
+      "136 2019-07-09 00:28:06.031865  \n",
+      "137 2019-07-09 00:28:06.031865  \n",
+      "138 2019-07-09 00:28:06.031865  \n",
+      "139 2019-07-09 00:28:06.031865  \n",
+      "140 2019-07-09 00:28:06.031865  \n",
+      "141 2019-07-09 00:28:06.031865  \n",
+      "142 2019-07-09 00:28:06.031865  \n",
+      "143 2019-07-09 00:28:06.031865  \n",
+      "144 2019-07-09 00:28:06.031865  \n",
+      "\n",
+      "[145 rows x 10 columns]\n"
      ]
     }
    ],
@@ -57,7 +281,7 @@
     "    #create a connection to the sql database \n",
     "    \n",
     "\n",
-    "with open('scraped_homes.txt', 'r') as output_file:\n",
+    "with open('scraped_homes.json', 'r') as output_file:\n",
     "    output = str(output_file.read())\n",
     "    new_data = json.loads(output)\n",
     "#     print(new_data)\n",
@@ -78,7 +302,7 @@
     "\n",
     "print(homesdf)\n",
     "\n",
-    "# homesdf.to_csv('data.csv', index = False)\n",
+    "homesdf.to_csv('data.csv', index = False)\n",
     "\n",
     "#RUN THE QUERY AND GET THE ADDRESS FROM THE SQL DATABASE AS A LIST THEN GRAB THE ADDRESS FORM THE SCRAPED DATA AS A LIST THEN \n",
     "#FIND THE INDEX OF THE LIST OF ADDRESS FROM THE PANDAS DATAFRAME FOR WHICH THERE ARE NO MATCHES IN SQL \n",
