--- a/scrape_to_txt.ipynb
+++ b/scrape_to_txt.ipynb
@@ -3102,7 +3102,7 @@
     "import threading\n",
     "import itertools\n",
     "import ast\n",
-    "# from task import homes_comparison\n",
+    "from txt_task import homes_comparison\n",
     "import json\n",
     "import sys\n",
     "\n",
@@ -3208,14 +3208,14 @@
     "\n",
     "\n",
     "\n",
-    "with open('scraped_homes.json', 'w') as output_file:\n",
-    "    json.dump(har_homes(), output_file)\n",
+    "# with open('scraped_homes.json', 'w') as output_file:\n",
+    "#     json.dump(har_homes(), output_file)\n",
     "    \n",
     "\n",
-    "har_homes()\n",
+    "# har_homes()\n",
     "\n",
-    "# def compare():\n",
-    "#     homes_comparison(scraped_homes = har_homes())\n",
+    "def compare():\n",
+    "    homes_comparison(scraped_homes = har_homes())\n",
     "#     # print(\"banana\")\n",
     "\n",
     "# def threader(job_func):\n",
