--- a/txt_task.ipynb
+++ b/txt_task.ipynb
@@ -281,14 +281,14 @@
     "    #create a connection to the sql database \n",
     "    \n",
     "\n",
-    "with open('scraped_homes.json', 'r') as output_file:\n",
-    "    output = str(output_file.read())\n",
-    "    new_data = json.loads(output)\n",
+    "# with open('scraped_homes.json', 'r') as output_file:\n",
+    "#     output = str(output_file.read())\n",
+    "#     new_data = json.loads(output)\n",
     "#     print(new_data)\n",
     "    \n",
-    "# engine = create_engine(\"mysql://xq5039a54f2ukgye:pzghos28lbhgg711@otwsl2e23jrxcqvx.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/lmib79r99ct0zdgq\", echo=False)\n",
-    "# conn = engine.connect()\n",
-    "# cur = conn.cursor()\n",
+    "engine = create_engine(\"mysql://xq5039a54f2ukgye:pzghos28lbhgg711@otwsl2e23jrxcqvx.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/lmib79r99ct0zdgq\", echo=False)\n",
+    "conn = engine.connect()\n",
+    "cur = conn.cursor()\n",
     "\n",
     "try: \n",
     "    homesdf = pd.DataFrame(new_data)\n",
@@ -313,7 +313,7 @@
     "#     retrieved_data = pd.read_sql(\"SELECT address FROM lmib79r99ct0zdgq.homes WHERE address = {}\".format(house['address']), engine)\n",
     "#     print(retrieved_data)\n",
     "    \n",
-    "#     if retrieved_data:\n",
+    "\n",
     "        \n",
     "\n",
     "    #what happens when the same house is sold within 3 years? homes sold more than once. Compare datestamp and address if datestamp is one year old \n",
@@ -334,14 +334,14 @@
     "        # if retrieved_data.empty:\n",
     "        #     homesdf.iloc[i].to_sql('lmib79r99ct0zdgq.homes', if_exists = 'append', schema= 'online', con=conn)\n",
     "\n",
-    "    # cur.execute(f\"INSERT INTO lmib79r99ct0zdgq VALUES homesdf\")\n",
+    "    cur.execute(f\"INSERT INTO lmib79r99ct0zdgq.homeVALUES homesdf\")\n",
     "    \n",
     "\n",
-    "    # conn.commit()\n",
+    "    conn.commit()\n",
     "    \n",
-    "# cur.close()\n",
+    "cur.close()\n",
     "\n",
-    "# conn.close()\n",
+    "conn.close()\n",
     "\n",
     "\n",
     "\n"
